realese fix for contact page on mobile

--- a/style.scss
+++ b/style.scss
@@ -183,6 +183,10 @@ p {
     flex-wrap: wrap;
   }
 
+  .tall-text {
+    line-height: 1.8;
+  }
+
   @media (min-width: 760px) {
 
     main {
